<resources>
    <string name="app_name">CC.01</string>
    <!-- Activity titles-->
    <string name="title_activity_video_feed">Video Feed</string>
    <string name="title_activity_RCController">RC Controller</string>
    <string name="title_activity_rccar">RCCar</string>
    <!-- Button Labels -->
    <string name="button_main_menu_car">Car</string>
    <string name="button_main_menu_controller">Controller</string>
    <string name="toggle_button_host_connect">Connect</string>
    <string name="toggle_button_host_disconnect">Disconnect</string>

    <!-- Text Lables -->
    <string name="title_main_menu">Main Menu</string>
    <string name="title_activity_rccontroller">RCController</string>
    <string name="text_status_text_placeholder">Please enter in the port and IP address of the host.</string>
    <string name="text_host_connection_status">Host Connection</string>
    <string name="text_host_ip_address">Host IP:</string>
    <string name="text_host_port">Host Port:</string>

    <!-- Connection status buttons-->
    <string name="button_car_connection_status">Car Connection</string>
    <string name="button_controller_connection_status">Controller Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
