<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.alistairmclean.cc01.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="193dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/title_main_menu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="437dp"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="66dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/button_main_menu_car"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="startCarActivity"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="startControllerActivity"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_main_menu_controller"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
