<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="me.alistairmclean.cc01.RCControllerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:id="@+id/host_connection_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/toggle_button_host_connect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/host_port_edit_text2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="4444"
            android:inputType="number"
            android:selectAllOnFocus="false"
            app:layout_constraintEnd_toStartOf="@+id/host_ip_edit_text2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/host_ip_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_host_ip_address"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/host_ip_edit_text2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/host_port_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_host_port"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/host_port_edit_text2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/host_ip_edit_text2"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="128.171.183.2"
            android:inputType="textShortMessage"
            android:selectAllOnFocus="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="100dp"
            android:paddingTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="-25dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="40dp"
                android:paddingRight="0dp"
                android:paddingTop="40dp">

                <ImageButton
                    android:id="@+id/drive_forward"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/drive_forward_button" />

                <ImageButton
                    android:id="@+id/drive_stop"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/stop_button" />

                <ImageButton
                    android:id="@+id/drive_reverse"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/drive_reverse_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/directional_button_container_height"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="140dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/steer_left"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/steer_left_button" />

                <ImageButton
                    android:id="@+id/steer_straight"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/straight_button" />

                <ImageButton
                    android:id="@+id/steer_right"
                    android:layout_width="@dimen/directional_button_width"
                    android:layout_height="@dimen/directional_button_height"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/steer_right_button" />

            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
